Galeria terminada, arreglo de footer
se termino la pag de galeria.
se acomodo el footer.
cambio de fuente

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,15 +1,22 @@
 
 @import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Skranji:wght@400;700&display=swap');
 * {
 	padding: 0px;
 	margin: 0px;
 	box-sizing: border-box;
 }
 body{
-	color: black;
-	font-family: 'Muli', sans-serif;
 	
-}
+	font-family: "Skranji", system-ui;
+	text-shadow: 
+        -1px -1px 0 #000,  
+         1px -1px 0 #000,
+        -1px  1px 0 #000,
+         1px  1px 0 #000; /* Sombra negra */
+	background-color: #174209;
+	
+	}
 header{
 	padding-top: 1%;
 	padding-right: 2%;
@@ -48,13 +55,13 @@ header div img {
 	display: none;
 	list-style: none;
 	width: 200px;
-	background-color: #174209;
+	background-color: black;
 }
 .horizontal li:hover .vertical{
 	display: block;
 }
 .vertical li:hover{
-	background-color: black;
+	background-color:#174209;
 }
 .vertical li a{
 	display: block;
@@ -69,8 +76,9 @@ section  {
 	padding-left: 5%;
 	padding-right: 5%;
 	padding-bottom: 5%;
-	padding-top: 0%;
+	padding-top: 6%;
 	width: 100%;
+	height: 1060px;
 }
 
 
@@ -87,22 +95,28 @@ section  {
 	text-align: center;
 }
 
-
+.principal div{
+	width: 100%;
+	padding: 2%;
+}
 
 .principal div #logo {
-
+	
 	display: flex;
-	margin-top: 90%;
-	margin-left: 10%;
-	justify-content: center;
+    margin-top: 70%;
+    margin-bottom: -3%;
+    margin-left: 31%;
+    justify-content: center;
+    height: 139px;
 }
 
 
 footer{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 60px;
+	display: contents;
+    align-items: start;
+    justify-content: center;
+    height: 350px;
+    width: 100%;
 	background-color: #174209;
 
 }
@@ -112,6 +126,26 @@ footer img{
 	height: auto;
 	margin-right: .5%;
 	padding: 10%;
+}
+
+footer .redes{
+
+	display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 46px;
+	background-color: #174209;
+	
+}
+
+footer .copy{
+
+	display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 3rem;
+	background-color:#174209;
+	color: #fff;
 	
 }
 
@@ -155,18 +189,18 @@ footer img{
 
 #titulopers {
 
-  font-family: 'Muli', sans-serif;
+  font-family: "Skranji", system-ui;
   align-items: center;
   justify-content: center;
   margin: 0;
   background-color: #174209;
   text-align: center;
   color: #fff;
-  padding-top: 8%;
+  padding-top: 5%;
   padding-bottom: 0%;
 }
 .cards {
-  font-family: 'Muli', sans-serif;
+  font-family: "Skranji", system-ui;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -213,6 +247,44 @@ footer img{
   transition: opacity 0.3s ease-in 0.4s;
 }
 
+.galeria{
+
+	
+	background-color: #172711;
+	margin-top: 3%;
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	gap: 1em;
+	padding: 1em;
+	border-radius: 10px;
+
+}
+
+.example-image-link img {
+
+	width: 100%;
+	border-radius: 10px;
+	height: 150px;
+}
+
+h1 {
+	font-family: "Skranji", system-ui;
+	align-items: center;
+	justify-content: center;
+	margin: 0;
+	text-align: center;
+	color: #fff;
+	padding-top: 3%;
+	padding-bottom: 0%;
+	font-size: 34px;
+}
+
+#tituloinicio {
+
+	padding-left: 1%;
+    font-size: 45px;
+    padding-bottom: 45%;
+}
 @media (max-width: 480px) {
 
 header {
