--- a/css/estilos.css
+++ b/css/estilos.css
@@ -162,7 +162,7 @@ footer .copy{
 	justify-content: center;
 }
 .secundario div {
-	display: inline;
+	display: block;
 	width: 33%;
 	padding-left: 2%;
 	text-align: center;
@@ -170,12 +170,12 @@ footer .copy{
 	}
 
 .secundario div img {
-	width: 90%;
+	width: 100%;
 	border-radius: 10px;
 	
 }
 
-.secundario div img:hover{
+.secundario div.div_inicio:hover{
 	transform: scale(1.05);
 }
 
@@ -194,14 +194,36 @@ footer .copy{
 	padding-left: 2%;
 	text-align:justify;
 	
-	}
+}
 .secundario div.imaghist {
 	display: inline;
 	width: 50%;
 	padding-left: 2%;
 	text-align: center;
+}
+
+.secundario div.parrafotemp {
+	display: block;
+	width: 100%;
+	padding-left: 2%;
+	text-align:justify;
 	
-	}
+}
+.secundario div.imagtemp {
+	display: block;
+	width: 100%;
+	padding-left: 2%;
+	text-align: center;
+}
+
+
+.secundario div.div_form {
+	display: inline;
+	width: 50%;
+	padding-left: 2%;
+	
+}
+
 * {
   box-sizing: border-box;
 }
@@ -215,7 +237,7 @@ footer .copy{
   background-color: #174209;
   text-align: center;
   color: #fff;
-  padding-top: 5%;
+  padding-top: 5.5%;
   padding-bottom: 0%;
 }
 .cards {
@@ -280,6 +302,22 @@ footer .copy{
 
 }
 
+.reseñas p{
+	background-color: #172711;
+	border-radius: 10px;
+	text-align: center;
+	font-style: oblique;
+}
+
+.reseñas {
+
+	margin-top: 2%;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 1em;
+	padding: 1em;
+	border-radius: 10px;
+}
 .example-image-link img {
 
 	width: 100%;
@@ -310,6 +348,83 @@ h1 {
     font-size: 45px;
     padding-bottom: 45%;
 }
+/* aca empieza lo del form*/
+div.form {
+	display: block;
+}
+.form{
+	
+	width:100%;
+	height:606px;
+	background:#e6e6e6;
+	border-radius:8px;
+	box-shadow:0 0 40px -10px #000;
+	margin:0;
+	padding:87px 30px;
+	box-sizing:border-box;
+	font-family:"Skranji", system-ui;
+	font-size: 14px;
+	position:relative
+}
+
+input{
+	width:100%;
+	margin-top: 30px;
+	padding:10px;
+	box-sizing:border-box;
+	background:none;
+	outline:none;
+	resize:none;
+	border:0;
+	transition:all .3s;
+	border-bottom:2px solid #bebed2;
+	font-family: "Skranji", system-ui;
+}
+
+input:focus{
+	border-bottom:2px solid #78788c
+}
+
+button{
+	padding:8px 12px;
+	margin:50px 0 0;
+	border:2px solid #78788c;
+	background:0;color:#5a5a6e;
+	cursor:pointer;
+	transition:all .3s;
+	font-family: "Skranji", system-ui;
+}
+
+button:hover{
+	background:#78788c;
+	color:#fff;
+}
+
+div.pie_contacto{
+	position:absolute;
+	bottom:-15px;
+	right:9%;
+	background:#50505a;
+	color:#fff;
+	width:420px;
+	padding:16px 4px 16px 0;
+	border-radius:6px;
+	box-shadow:10px 10px 40px -14px #000;
+}
+
+div.pie_contacto span{
+	margin:0 5px 0 15px;
+}
+/*aca termina lo del form*/
+
+.secundario div.imgcont {
+
+	display: inline;
+    width: 50%;
+    padding-left: 2%;
+    text-align: center;
+}
+
 @media (max-width: 480px) {
 
 header {
